# plum

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENCE.txt  MANIFEST.in  Makefile  README.md  advanced_usage.html  api.html  autoreload.html  basic_usage.html  benchmark.py  check_linter_assertions.py  classes.html  command_line.html  comparison.html  conftest.py  conversion_promotion.html  dispatch.html  genindex.html  index.html  integration.html  intro.html  keyword_arguments.html  noxfile.py  objects.inv  parametric.html  precedence.html  py-modindex.html  pyproject.toml  requirements.txt  run_mypy_assertions.py  scope.html  search.html  searchindex.js  (+8 more)
.github/workflows/: build-wheels.yml  build_book.yml  ci.yml  codeql.yml  formatting_check.yml  publish.yml  publish_new_pypi_name.yml
_modules/: index.html
_modules/plum/: _alias.html  _autoreload.html  _dispatcher.html  _function.html  _method.html  _parametric.html  _promotion.html  _resolver.html  _signature.html  _type.html  _util.html  alias.html  autoreload.html  dispatcher.html  function.html  method.html  parametric.html  promotion.html  repr.html  resolvable.html  resolver.html  signature.html  type.html  util.html
_sources/: advanced_usage.md  api.rst  basic_usage.md  classes.md  comparison.md  conversion_promotion.md  dispatch.md  intro.md  parametric.md  scope.md  type_system.md  types.md  union_aliases.md
doc/: Makefile  conf.py  index.rst  readme.rst
doc/source/: plum.dispatcher.rst  plum.function.rst  plum.resolvable.rst  plum.tuple.rst  plum.type.rst  plum.util.rst
docs/: _config.yml  _toc.yml  advanced.md  advanced_usage.md  api.rst  autoreload.md  basic-usage.md  basic_usage.md  classes.md  command_line.md  comparison.md  conf.py  conversion_promotion.md  dispatch.md  generics.md  index.md  installation.md  integration.md  intro.md  keyword_arguments.md  parametric.md  precedence.md  scope.md  types.md  union_aliases.md
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  package.html  package_modules.html  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/md/: dispatcher.html  function.html  signature.html  type.html  util.html
docs/_build/html/_modules/plum/: dispatcher.html  function.html  parametric.html  promotion.html  resolvable.html  signature.html  tuple.html  type.html  util.html
docs/_build/html/_sources/: package.rst.txt  package_modules.rst.txt  readme.rst.txt
docs/_build/html/_sources/source/: md.dispatcher.rst.txt  md.function.rst.txt  md.rst.txt  md.signature.rst.txt  md.type.rst.txt  md.util.rst.txt  modules.rst.txt  plum.dispatcher.rst.txt  plum.parametric.rst.txt  plum.promotion.rst.txt  plum.resolvable.rst.txt  plum.rst.txt  plum.signature.rst.txt  plum.type.rst.txt
docs/_build/html/source/: md.dispatcher.html  md.function.html  md.html  md.signature.html  md.type.html  md.util.html  modules.html  plum.dispatcher.html  plum.function.html  plum.html  plum.parametric.html  plum.promotion.html  plum.resolvable.html  plum.signature.html  plum.tuple.html  plum.type.html  plum.util.html
docs/_generated/: generics_timing.md
docs/_scripts/: time_generics.py
plum/: __init__.py  _alias.py  _autoreload.py  _dispatcher.py  _function.py  _method.py  _overload.py  _parametric.py  _promotion.py  _resolver.py  _signature.py  _type.py  _version.py  alias.py  autoreload.py  dispatcher.py  function.py  method.py  overload.py  overload.pyi  parametric.py  plum_typing.py  promotion.py  repr.py  resolvable.py  resolver.py  signature.py  tuple.py  type.py  typing.py  util.py
src/plum/: __init__.py  _alias.py  _bear.py  _dispatcher.py  _function.py  _generic.py  _method.py  _parametric.py  _promotion.py  _resolver.py  _signature.py  _type.py  autoreload.py  overload.py  promotion.py  repr.py  resolver.py  signature.py
tests/: __init__.py  benchmark.py  benchmark_generics.py  conftest.py  test.py  test_alias.py  test_alias_314plus.py  test_alias_upto313.py  test_autoreload.py  test_cache.py  test_cases.py  test_dispatch.py  test_dispatcher.py  test_dispatcher_cache.py  test_dispatcher_return_type.py  test_function.py  test_generic_decorator.py  test_generic_dispatch.py  test_init.py  test_method.py  test_overload.py  test_parametric.py  test_precedence.py  test_promotion.py  test_repr.py  test_resolvable.py  test_resolver.py  test_return_type.py  test_signature.py  test_tuple.py  test_type.py  test_util.py  util.py
tests/advanced/: test_advanced.py  test_annotated.py  test_cases.py  test_future_annotations.py  test_precedence.py  test_return_type.py
tests/dispatcher/: __init__.py  test.py  test_cache.py  test_cases.py  test_dispatcher.py  test_future_annotations.py  test_precedence.py  test_return_type.py
tests/function/: test_cache.py  test_function.py
tests/static/: dispatches.pyi  function_get.pyi  overload.pyi
tests/typechecked/: test_overload.py
tests/usecases/: test_advanced.py  test_correctness.py  test_dispatcher.py
