[project]
name = "plum-dispatch"
description="Multiple dispatch in Python"
authors=[
    {name = "Wessel Bruinsma", email="wessel.p.bruinsma@gmail.com"},
]
license = {text= "MIT"}
readme = "README.md"
keywords = ["multiple dispatch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
    "beartype>=0.16.2",
    "typing-extensions>=4.9.0",
    "rich>=10.0"
]

[project.urls]
repository = "https://github.com/beartype/plum"
documentation = "https://beartype.github.io/plum"


[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "nox" },
    { include-group = "test_static" },
    { include-group = "test_runtime" },
]
docs = [
    "jupyter-book>=1.0.0,<2.0.0",
]
lint = [
    "pre-commit>=4.3.0",
    "pylint>=4.0.4",
]
nox = [
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
    "uv>=0.9.16",
]
test_static = [
    "mypy>=1.18.2",
    "pyright>=1.1.331",
]
test_runtime = [
    "coveralls>=4.0.1",
    "ipython>=8.18.1",
    "numpy>=2.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sybil[pytest]>=9.2.0",
]


[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch]
version.source = "vcs"
build.include = ["plum*"]
build.hooks.vcs.version-file = "plum/_version.py"


# Development tools
[tool.coverage]
run.branch = true
run.command_line = "-m pytest --verbose test"
run.source = ["plum"]
report.exclude_also = [
  '\.\.\.',
  'if TYPE_CHECKING:',
  'if typing.TYPE_CHECKING:',
]

[tool.pytest.ini_options]
testpaths = ["tests/", "plum", "docs"]
addopts = [
    "-ra",
    "-p",
    "no:doctest",
]
minversion = "6.0"


[tool.ruff]
src = ["plum"]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "D410",
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["F811", "B018", "UP038"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["beartype"]
known-local-folder = ["plum"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.format]
docstring-code-format = true
