[project]
name = "plum-dispatch"
description="Multiple dispatch in Python"
authors=[
    {name = "Wessel Bruinsma", email="wessel.p.bruinsma@gmail.com"},
]
license = {text= "MIT"}
readme = "README.md"
keywords = ["multiple dispatch"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
    "beartype>=0.16.2",
    "typing-extensions>=4.9.0",
    "rich>=10.0"
]

[project.urls]
repository = "https://github.com/beartype/plum"
documentation = "https://beartype.github.io/plum"


[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "nox" },
    { include-group = "test_static" },
    { include-group = "test_runtime" },
]
build = [
    "hatch>=1.15.1",
    "hatch-mypyc>=0.16.0",
    "hatch-vcs",
]
wheels = [
    "cibuildwheel>=2.22.0",
]
docs = [
    "jupyter-book>=1.0.0,<2.0.0",
]
lint = [
    "pre-commit>=4.3.0",
    "pylint>=4.0.4",
]
nox = [
    "nox>=2025.11.12",
    "nox-uv>=0.6.3",
    "uv>=0.9.16",
]
test_static = [
    "mypy>=1.18.2",
    "pyright>=1.1.331",
]
test_runtime = [
    "coveralls>=4.0.1",
    "ipython>=8.18.1",
    "numpy>=2.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sybil[pytest]>=9.2.0",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/plum/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plum"]

[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = ["hatch-mypyc>=0.16.0", "mypy>=1.18.2"]
require-runtime-dependencies = true
# Only compile the core performance-sensitive modules
include = [
    "src/plum/_bear.py",
    "src/plum/dispatcher.py",
    "src/plum/method.py",
    "src/plum/overload.py",
    "src/plum/resolver.py",
]
mypy-args = [
    "--ignore-missing-imports",
    "--disable-error-code=assignment",
    "--disable-error-code=attr-defined",
    "--disable-error-code=return-value",
    "--disable-error-code=arg-type",
    "--disable-error-code=type-var",
    "--disable-error-code=misc",
    "--disable-error-code=valid-type",
    "--disable-error-code=no-redef",
]
options = { debug_level = "0" }

[tool.cibuildwheel]
build-verbosity = 1

# Target environments:
# - Python: CPython 3.10+ only
# - Architecture (64-bit only): amd64 / x86_64, universal2, and arm64
# - OS: Linux (no musl), Windows, and macOS
build = "cp310-* cp311-* cp312-* cp313-*"
skip = [
    "*-manylinux_i686",
    "*-musllinux_*",
    "*-win32",
    "pp*",
]

test-command = 'pytest {project}/tests -k "not incompatible_with_mypyc" --ignore={project}/tests/advanced'
test-requires = ["pytest>=8.4.2"]
# Skip testing arm64 builds on Intel Macs
test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]

[tool.cibuildwheel.environment]
HATCH_BUILD_HOOKS_ENABLE = "1"
MYPYC_OPT_LEVEL = "3"
MYPYC_DEBUG_LEVEL = "0"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"


# Development tools
[tool.coverage]
run.branch = true
run.command_line = "-m pytest --verbose test"
run.source = ["src/plum"]
report.exclude_also = [
  '\.\.\.',
  'if TYPE_CHECKING:',
  'if typing.TYPE_CHECKING:',
]


[tool.mypy]
disable_error_code = ["no-redef"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = ["src/plum"]
strict = true
follow_imports = "skip"  # TODO: Set to "normal" when mypy errors are fixed
show_error_codes = true
exclude = [  # TODO: Fix the mypy errors in all these files
    "src/plum/parametric\\.py",
    "src/plum/promotion\\.py",
]


[tool.pytest.ini_options]
testpaths = ["tests/", "src/plum", "docs"]
addopts = [
    "-ra",
    "-p",
    "no:doctest",
]
minversion = "6.0"
markers = [
    "incompatible_with_mypyc: marks tests as incompatible with mypyc-compiled code",
]


[tool.ruff]
src = ["src/plum"]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "D410",
    "E", "W",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["F811", "B018", "UP038"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["beartype"]
known-local-folder = ["plum"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.format]
docstring-code-format = true
