[metadata]
name = plum-dispatch
version = 0.1.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Multiple dispatch in Python
url = https://github.com/wesselb/plum
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown