[metadata]
name = plum-dispatch
version = 1.3.2
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Multiple dispatch in Python
url = https://github.com/wesselb/plum
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
